Simplifying Docker Config Json
Signed-off-by: Graham Turner <grahamturnernew@hotmail.com>

--- a/copy_me.tf.example
+++ b/copy_me.tf.example
@@ -26,6 +26,7 @@ module "cerella" {
   eks-instance-type  = "<Please contact support>"
   eks-instance-count = "<Please contact support>"
   ingress_cidr       = ["<The client source CIDR>"]
+  docker_config      = "<Please contact support>"
 }
 
 output "config_map_aws_auth" {
