--- a/copy_me.tf.example
+++ b/copy_me.tf.example
@@ -20,16 +20,16 @@ provider "kubernetes" {
 
 module "cerella" {
 
-  source             = "git::https://github.com/optibrium/cerella_terraform.git//cerella?ref=v1.2.2"
-  hosted-zone-id     = "<Your Hosted Zone ID>"
-  domain             = "<Your DNS domain>"
-  cluster-name       = "<Please contact support>"
-  eks-instance-type  = "<Please contact support>"
-  eks-instance-count = "<Please contact support>"
-  ingress_cidr       = ["<The client source CIDR>"]
-
-  registry_username  = "${var.registry_username}"
-  registry_password  = "${var.registry_password}"
+  source                = "git::https://github.com/optibrium/cerella_terraform.git//cerella?ref=v1.2.2"
+  hosted-zone-id        = "<Your Hosted Zone ID>"
+  domain                = "<Your DNS domain>"
+  cluster-name          = "<Please contact support>"
+  eks-instance-type     = "<Please contact support>"
+  eks-instance-count    = "<Please contact support>"
+  ingress_cidr          = ["<The client source CIDR>"]
+  ingest-instance-type  = "t3.2xlarge"
+  registry_username     = "${var.registry_username}"
+  registry_password     = "${var.registry_password}"
 }
 
 variable "registry_username" {
